android-platform-external-libselinux (6.0.1+r16-2) UNRELEASED; urgency=medium

  * Install libraries to DEB_HOST_MULTIARCH path
  * Update Standards-Version to 3.9.8 (no changes)

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 17 May 2016 22:41:09 +0800

android-platform-external-libselinux (6.0.1+r16-1) unstable; urgency=medium

  * New upstream release

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 16 Feb 2016 13:35:31 +0800

android-platform-external-libselinux (6.0.0+r26-3) unstable; urgency=medium

  * upload to unstable

 -- Hans-Christoph Steiner <hans@eds.org>  Sun, 07 Feb 2016 21:51:38 +0100

android-platform-external-libselinux (6.0.0+r26-2) experimental; urgency=medium

  * Add version 0 to SONAME
  * Install docs for libselinux

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 17 Nov 2015 21:51:31 +0800

android-platform-external-libselinux (6.0.0+r26-1) experimental; urgency=low

  * New upstream release
  * Remove version info from the library

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 12 Nov 2015 11:46:33 +0800

android-platform-external-libselinux (5.1.1+r8-1) unstable; urgency=low

  [ Kai-Chung Yan ]
  * Initial release (Closes: #793611)

 -- Hans-Christoph Steiner <hans@eds.org>  Wed, 19 Aug 2015 13:35:27 +0200